Switch to transparent favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Winston Health</title>
 
-    <link rel="icon" href="assets/images/Winston Health Graphic Logo.png">
+    <link rel="icon" href="assets/images/Winston Health Graphic Logo Transparent.png">
     <link rel="stylesheet" href="assets/css/main.css">
 
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,600,700,900" rel="stylesheet">
